style.css
@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@200;300;400;500;700;900&display=swap');

:root
{
    font-size: 16px;
    font-family: "Gothic A1", "Century Gothic";
}

html
{
    overflow: hidden;
    height: 100%;
}

body
{
    margin: 0;
    padding: 0;

    overflow: auto;
    height: 100%;
    overscroll-behavior: none;
}

main
{

    background: url(assets/background1.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

/* Scroll bar (Google Chrome ONLY)
body::-webkit-scrollbar
{
    width: 0.25rem;
}

body::-webkit-scrollbar-track
{
    background-color: #d1c0a8;
}

body::-webkit-scrollbar-thumb
{
    background-color: #3e69ad;
}
Scroll bar (Google Chrome ONLY) */


h2
{
    font-size: 2em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

p
{
    font-size: .9em;
    text-align: left;
    margin: 20px;
    padding: none;
    color: aliceblue;
    letter-spacing: 0.1em;
    width: 100%;
}

.inputs
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    flex-direction: column;
    z-index: 1;

    border: 2px;
    border-style: solid;
    border-color: aliceblue;
    border-radius: 10px;
    backdrop-filter: blur(20px);
    height: 550px;
    width: 350px;
}

.entry-box
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: 10px;
    border: 2px solid aliceblue;
    border-radius: 10px;
    background-color: transparent;
    position: relative;
    font-size: 18px;
}

.entry-box input[type="text"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box input[type="password"]
{
    width: 100%;
    padding: 20px 10px 5px 0px;
    border: none;
    border-radius: 10px;
    background-color: transparent;
    outline: none;
    font-size: inherit;
    color: aliceblue;
}

.entry-box label 
{
    position: absolute;
    top: 50%;
    left: 10px;
    transform: translateY(-50%);
    color: #f5f5f5;
    pointer-events: none;
    transition: 0.3s;
}

.entry-box svg 
{
    fill: #f5f5f5;
    margin-right: 5px;
    width: 1em;
    height: 1em;
}

.entry-box input[type="text"]:focus + label,
.entry-box input[type="text"]:valid + label
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.entry-box input[type="password"]:focus + label,
.entry-box input[type="password"]:valid + label 
{
    transform: translateY(-150%);
    font-size: 0.8em; 
    color: aliceblue;
}

.forget-button
{
    display: flex;
    align-items: center;
    margin: 20px;
    padding: none;
    position: relative;
}

.forget
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    letter-spacing: normal;
    text-decoration: none;
    cursor: pointer;
    transition: background-color 0.3s;
    opacity: 1;
}

.forget:hover
{
    background: rgba(0, 114, 177, .5);
}

.sign-in-button
{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-in
{
    background-color: #0072b1;
    color: aliceblue;
    border: none;
    padding: 15px 130px;
    border-radius: 30px;
    font-size: 16px;
    text-decoration: none;
    letter-spacing: 0.1em;
}

.sign-up-button
{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.sign-up
{
    background-color: transparent;
    color: aliceblue;
    padding: 10px 10px;
    border: none;
    border-radius: 20px;
    font-size: 16px;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    letter-spacing: normal;
    transition: background-color 0.3s;
    opacity: 1;
}

.sign-up:hover
{
    background: rgba(0, 114, 177, .5);
}

.other-login-separator
{
    display: flex;
    align-items: center;
    text-align: center;
    text-decoration: none;
    font-size: 0.85em;
    color: aliceblue;
    letter-spacing: 0.1em;
    margin: 20px;
    padding: 0;
}

.other-login-separator::before,
.other-login-separator::after
{
    content: '';
    flex: 1;
    border-bottom: 2px solid aliceblue;
}

.other-login-separator:not(:empty)::before
{
    margin-right: 0.8em;
}

.other-login-separator:not(:empty)::after
{
    margin-left: 0.8em;
}

.alt-sign-in
{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: relative;
    border-radius: 100%;
    margin: 0;
    padding: 0;
}

.alt-sign-in svg
{
    fill: aliceblue;
    background-color: transparent;
    padding-bottom: 15px;
}

